fix: fields styles on mobile

--- a/src/shared/components/text-field/TextField.module.scss
+++ b/src/shared/components/text-field/TextField.module.scss
@@ -3,7 +3,7 @@
 	margin-bottom: 20px;
 
 	@media (max-width: 600px) {
-		width: 0%;
+		width: 100%;
 	}
 
 	label {
